--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDnykfzFUS_GfpwwKIt2VeKzVbIt2-HSJ0" />
+            android:value="" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
